[package]
name = "aoc_2022"
version = "0.1.0"
description = "Advent of Code 2022 solutions"
edition = "2021"

[[bin]]
name = "day1"
path = "./src/day1/main.rs"

[[bin]]
name = "day2"
path = "./src/day2/main.rs"

[[bin]]
name = "day3"
path = "./src/day3/main.rs"

[[bin]]
name = "day4"
path = "./src/day4/main.rs"

[[bin]]
name = "day5"
path = "./src/day5/main.rs"

[dependencies]
regex = "1"
